Horizontal separators are now aligned. Privacy icons no longer displayed.

--- a/app/assets/stylesheets/redesign/_layout.scss
+++ b/app/assets/stylesheets/redesign/_layout.scss
@@ -66,6 +66,10 @@
       margin-right: 3px;
     }
   }
+  hr.separator {
+    margin-left: $space-s;
+    margin-right: $space-s;
+  }
 }
 
 // DASHBOARD VIEW
